@@ -1,42 +1,53 @@
 package io.metersphere.plan.service;
 
+import io.metersphere.api.domain.*;
 import io.metersphere.api.dto.definition.ApiDefinitionDTO;
 import io.metersphere.api.dto.definition.ApiTestCaseDTO;
+import io.metersphere.api.dto.definition.ApiTestCasePageRequest;
+import io.metersphere.api.mapper.ApiReportMapper;
+import io.metersphere.api.mapper.ApiTestCaseMapper;
+import io.metersphere.api.mapper.ExtApiDefinitionModuleMapper;
+import io.metersphere.api.service.ApiBatchRunBaseService;
+import io.metersphere.api.service.ApiExecuteService;
 import io.metersphere.api.service.definition.ApiDefinitionModuleService;
 import io.metersphere.api.service.definition.ApiDefinitionService;
+import io.metersphere.api.service.definition.ApiReportService;
 import io.metersphere.api.service.definition.ApiTestCaseService;
 import io.metersphere.functional.dto.FunctionalCaseModuleCountDTO;
 import io.metersphere.functional.dto.ProjectOptionDTO;
+import io.metersphere.plan.constants.AssociateCaseType;
 import io.metersphere.plan.constants.TreeTypeEnums;
-import io.metersphere.plan.domain.TestPlanApiCase;
-import io.metersphere.plan.domain.TestPlanApiCaseExample;
-import io.metersphere.plan.domain.TestPlanCollection;
-import io.metersphere.plan.domain.TestPlanCollectionExample;
-import io.metersphere.plan.dto.ApiCaseModuleDTO;
-import io.metersphere.plan.dto.TestPlanCaseRunResultCount;
-import io.metersphere.plan.dto.TestPlanResourceAssociationParam;
+import io.metersphere.plan.domain.*;
+import io.metersphere.plan.dto.*;
 import io.metersphere.plan.dto.request.*;
 import io.metersphere.plan.dto.response.TestPlanApiCasePageResponse;
 import io.metersphere.plan.dto.response.TestPlanAssociationResponse;
-import io.metersphere.plan.mapper.ExtTestPlanApiCaseMapper;
-import io.metersphere.plan.mapper.TestPlanApiCaseMapper;
-import io.metersphere.plan.mapper.TestPlanCollectionMapper;
+import io.metersphere.plan.dto.response.TestPlanOperationResponse;
+import io.metersphere.plan.mapper.*;
 import io.metersphere.project.domain.Project;
 import io.metersphere.project.domain.ProjectExample;
 import io.metersphere.project.dto.ModuleCountDTO;
+import io.metersphere.project.dto.MoveNodeSortDTO;
 import io.metersphere.project.mapper.ProjectMapper;
-import io.metersphere.sdk.constants.CaseType;
-import io.metersphere.sdk.constants.ModuleConstants;
-import io.metersphere.sdk.constants.TestPlanResourceConstants;
+import io.metersphere.sdk.constants.*;
 import io.metersphere.sdk.domain.Environment;
 import io.metersphere.sdk.domain.EnvironmentExample;
+import io.metersphere.sdk.dto.api.task.*;
+import io.metersphere.sdk.exception.MSException;
 import io.metersphere.sdk.mapper.EnvironmentMapper;
 import io.metersphere.sdk.util.BeanUtils;
+import io.metersphere.sdk.util.CommonBeanFactory;
 import io.metersphere.sdk.util.Translator;
 import io.metersphere.system.dto.LogInsertModule;
 import io.metersphere.system.dto.sdk.BaseTreeNode;
+import io.metersphere.system.dto.sdk.SessionUser;
+import io.metersphere.system.log.constants.OperationLogModule;
+import io.metersphere.system.log.constants.OperationLogType;
+import io.metersphere.system.log.dto.LogDTO;
+import io.metersphere.system.log.service.OperationLogService;
 import io.metersphere.system.service.UserLoginService;
 import io.metersphere.system.uid.IDGenerator;
+import io.metersphere.system.utils.ServiceUtils;
 import jakarta.annotation.Resource;
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.collections.MapUtils;
@@ -53,11 +64,18 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 @Transactional(rollbackFor = Exception.class)
 public class TestPlanApiCaseService extends TestPlanResourceService {
+
+    @Resource
+    private TestPlanMapper testPlanMapper;
+    @Resource
+    private ExtTestPlanMapper extTestPlanMapper;
     @Resource
     private TestPlanApiCaseMapper testPlanApiCaseMapper;
     @Resource
@@ -66,6 +84,12 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
     private ApiDefinitionService apiDefinitionService;
     @Resource
     private ApiTestCaseService apiTestCaseService;
+    @Resource
+    private ApiBatchRunBaseService apiBatchRunBaseService;
+    @Resource
+    private TestPlanApiBatchRunBaseService testPlanApiBatchRunBaseService;
+    @Resource
+    private ApiReportService apiReportService;
     @Resource
     private ProjectMapper projectMapper;
     @Resource
@@ -78,7 +102,23 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
     @Resource
     private SqlSessionFactory sqlSessionFactory;
     @Resource
+    private ApiExecuteService apiExecuteService;
+    @Resource
+    private ApiTestCaseMapper apiTestCaseMapper;
+    @Resource
+    private TestPlanResourceLogService testPlanResourceLogService;
+    @Resource
     private TestPlanCollectionMapper testPlanCollectionMapper;
+    @Resource
+    private ExtTestPlanCollectionMapper extTestPlanCollectionMapper;
+    @Resource
+    private TestPlanConfigService testPlanConfigService;
+    @Resource
+    private ApiReportMapper apiReportMapper;
+    @Resource
+    private OperationLogService operationLogService;
+    @Resource
+    private ExtApiDefinitionModuleMapper extApiDefinitionModuleMapper;
 
     @Override
     public void deleteBatchByTestPlanId(List<String> testPlanIdList) {
@@ -88,14 +128,18 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
     }
 
     @Override
-    public long getNextOrder(String projectId) {
-        return 0;
+    public long getNextOrder(String collectionId) {
+        Long maxPos = extTestPlanApiCaseMapper.getMaxPosByCollectionId(collectionId);
+        if (maxPos == null) {
+            return DEFAULT_NODE_INTERVAL_POS;
+        } else {
+            return maxPos + DEFAULT_NODE_INTERVAL_POS;
+        }
     }
 
     @Override
     public void updatePos(String id, long pos) {
-        //        todo
-        //        extTestPlanApiCaseMapper.updatePos(id, pos);
+        extTestPlanApiCaseMapper.updatePos(id, pos);
     }
 
     @Override
@@ -105,8 +149,9 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
     }
 
     @Override
-    public long copyResource(String originalTestPlanId, String newTestPlanId, String operator, long operatorTime) {
+    public long copyResource(String originalTestPlanId, String newTestPlanId, Map<String, String> oldCollectionIdToNewCollectionId, String operator, long operatorTime) {
         List<TestPlanApiCase> copyList = new ArrayList<>();
+        String defaultCollectionId = extTestPlanCollectionMapper.selectDefaultCollectionId(newTestPlanId, CaseType.SCENARIO_CASE.getKey());
         extTestPlanApiCaseMapper.selectByTestPlanIdAndNotDeleted(originalTestPlanId).forEach(originalCase -> {
             TestPlanApiCase newCase = new TestPlanApiCase();
             BeanUtils.copyBean(newCase, originalCase);
@@ -115,7 +160,8 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
             newCase.setCreateTime(operatorTime);
             newCase.setCreateUser(operator);
             newCase.setLastExecTime(0L);
-            newCase.setLastExecResult(null);
+            newCase.setTestPlanCollectionId(oldCollectionIdToNewCollectionId.get(newCase.getTestPlanCollectionId()) == null ? defaultCollectionId : oldCollectionIdToNewCollectionId.get(newCase.getTestPlanCollectionId()));
+            newCase.setLastExecResult(ExecStatus.PENDING.name());
             newCase.setLastExecReportId(null);
             copyList.add(newCase);
         });
@@ -130,15 +176,14 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
 
     @Override
     public void refreshPos(String testPlanId) {
-        //        todo
-        //        List<String> caseIdList = extTestPlanApiCaseMapper.selectIdByTestPlanIdOrderByPos(testPlanId);
-        //        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
-        //        ExtTestPlanApiCaseMapper batchUpdateMapper = sqlSession.getMapper(ExtTestPlanApiCaseMapper.class);
-        //        for (int i = 0; i < caseIdList.size(); i++) {
-        //            batchUpdateMapper.updatePos(caseIdList.get(i), i * DEFAULT_NODE_INTERVAL_POS);
-        //        }
-        //        sqlSession.flushStatements();
-        //        SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
+        List<String> caseIdList = extTestPlanApiCaseMapper.selectIdByTestPlanIdOrderByPos(testPlanId);
+        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+        ExtTestPlanApiCaseMapper batchUpdateMapper = sqlSession.getMapper(ExtTestPlanApiCaseMapper.class);
+        for (int i = 0; i < caseIdList.size(); i++) {
+            batchUpdateMapper.updatePos(caseIdList.get(i), i * DEFAULT_NODE_INTERVAL_POS);
+        }
+        sqlSession.flushStatements();
+        SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
     }
 
     /**
@@ -149,6 +194,9 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
      * @return
      */
     public List<ApiDefinitionDTO> getApiPage(TestPlanApiRequest request, boolean isRepeat) {
+        if (CollectionUtils.isEmpty(request.getProtocols())) {
+            return new ArrayList<>();
+        }
         List<ApiDefinitionDTO> list = extTestPlanApiCaseMapper.list(request, isRepeat);
         apiDefinitionService.processApiDefinitions(list);
         return list;
@@ -163,8 +211,12 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
      * @return
      */
     public List<ApiTestCaseDTO> getApiCasePage(TestPlanApiCaseRequest request, boolean isRepeat) {
-        List<ApiTestCaseDTO> apiCaseLists = apiTestCaseService.page(request, isRepeat, false);
-        return apiCaseLists;
+        if (CollectionUtils.isEmpty(request.getProtocols())) {
+            return new ArrayList<>();
+        }
+        ApiTestCasePageRequest pageRequest = new ApiTestCasePageRequest();
+        BeanUtils.copyBean(pageRequest, request);
+        return apiTestCaseService.page(pageRequest, false, isRepeat, request.getTestPlanId());
     }
 
 
@@ -176,21 +228,85 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
      * @return
      */
     public List<TestPlanApiCasePageResponse> hasRelateApiCaseList(TestPlanApiCaseRequest request, boolean deleted) {
+        if (CollectionUtils.isEmpty(request.getProtocols())) {
+            return new ArrayList<>();
+        }
         List<TestPlanApiCasePageResponse> list = extTestPlanApiCaseMapper.relateApiCaseList(request, deleted);
-        buildApiCaseResponse(list);
+        buildApiCaseResponse(list, request.getTestPlanId());
         return list;
     }
 
-    private void buildApiCaseResponse(List<TestPlanApiCasePageResponse> apiCaseList) {
+    private void buildApiCaseResponse(List<TestPlanApiCasePageResponse> apiCaseList, String testPlanId) {
         if (CollectionUtils.isNotEmpty(apiCaseList)) {
             Map<String, String> projectMap = getProject(apiCaseList);
-            Map<String, String> envMap = getEnvironmentMap(apiCaseList);
             Map<String, String> userMap = getUserMap(apiCaseList);
-            apiCaseList.forEach(apiCase -> {
-                apiCase.setProjectName(projectMap.get(apiCase.getProjectId()));
-                apiCase.setEnvironmentName(envMap.get(apiCase.getId()));
-                apiCase.setCreateUserName(userMap.get(apiCase.getCreateUser()));
-            });
+            Map<String, String> moduleNameMap = getModuleName(apiCaseList);
+            handleCaseAndEnv(apiCaseList, projectMap, userMap, testPlanId, moduleNameMap);
+        }
+    }
+
+    private Map<String, String> getModuleName(List<TestPlanApiCasePageResponse> apiCaseList) {
+        List<String> moduleIds = apiCaseList.stream().map(TestPlanApiCasePageResponse::getModuleId).toList();
+        List<ApiDefinitionModule> modules = extApiDefinitionModuleMapper.getNameInfoByIds(moduleIds);
+        return modules.stream()
+                .collect(Collectors.toMap(ApiDefinitionModule::getId, ApiDefinitionModule::getName));
+    }
+
+    private void handleCaseAndEnv(List<TestPlanApiCasePageResponse> apiCaseList, Map<String, String> projectMap, Map<String, String> userMap, String testPlanId, Map<String, String> moduleNameMap) {
+        //获取二级节点环境
+        List<TestPlanCollectionEnvDTO> secondEnv = extTestPlanCollectionMapper.selectSecondCollectionEnv(CaseType.API_CASE.getKey(), ModuleConstants.ROOT_NODE_PARENT_ID, testPlanId);
+        Map<String, TestPlanCollectionEnvDTO> secondEnvMap = secondEnv.stream().collect(Collectors.toMap(TestPlanCollectionEnvDTO::getId, item -> item));
+        //获取一级节点环境
+        TestPlanCollectionEnvDTO firstEnv = extTestPlanCollectionMapper.selectFirstCollectionEnv(CaseType.API_CASE.getKey(), ModuleConstants.ROOT_NODE_PARENT_ID, testPlanId);
+        //当前用例环境
+        List<String> caseEnvIds = apiCaseList.stream().map(TestPlanApiCasePageResponse::getEnvironmentId).toList();
+        EnvironmentExample environmentExample = new EnvironmentExample();
+        environmentExample.createCriteria().andIdIn(caseEnvIds);
+        List<Environment> caseEnv = environmentMapper.selectByExample(environmentExample);
+        Map<String, String> caseEnvMap = caseEnv.stream().collect(Collectors.toMap(Environment::getId, Environment::getName));
+        apiCaseList.forEach(item -> {
+            item.setProjectName(projectMap.get(item.getProjectId()));
+            item.setCreateUserName(userMap.get(item.getCreateUser()));
+            item.setExecuteUserName(userMap.get(item.getExecuteUser()));
+            item.setModuleName(StringUtils.isNotBlank(moduleNameMap.get(item.getModuleId())) ? moduleNameMap.get(item.getModuleId()) : Translator.get("api_unplanned_request"));
+            if (secondEnvMap.containsKey(item.getTestPlanCollectionId())) {
+                TestPlanCollectionEnvDTO collectEnv = secondEnvMap.get(item.getTestPlanCollectionId());
+                if (collectEnv.getExtended()) {
+                    //继承
+                    getRunEnv(firstEnv, caseEnvMap, item);
+                } else {
+                    getRunEnv(collectEnv, caseEnvMap, item);
+                }
+            }
+        });
+    }
+
+    private void getRunEnv(TestPlanCollectionEnvDTO collectEnv, Map<String, String> caseEnvMap, TestPlanApiCasePageResponse item) {
+        if (StringUtils.equalsIgnoreCase(collectEnv.getEnvironmentId(), ModuleConstants.ROOT_NODE_PARENT_ID)) {
+            //计划集 == 默认环境   处理默认环境
+            doHandleDefaultEnv(item, caseEnvMap);
+        } else {
+            //计划集 != 默认环境
+            doHandleEnv(item, collectEnv);
+        }
+    }
+
+    private void doHandleEnv(TestPlanApiCasePageResponse item, TestPlanCollectionEnvDTO collectEnv) {
+        if (StringUtils.isNotBlank(collectEnv.getEnvironmentName())) {
+            item.setEnvironmentId(collectEnv.getEnvironmentId());
+            item.setEnvironmentName(collectEnv.getEnvironmentName());
+        } else {
+            item.setEnvironmentId(null);
+            item.setEnvironmentName(null);
+        }
+    }
+
+    private void doHandleDefaultEnv(TestPlanApiCasePageResponse item, Map<String, String> caseEnvMap) {
+        if (caseEnvMap.containsKey(item.getEnvironmentId())) {
+            item.setEnvironmentName(caseEnvMap.get(item.getEnvironmentId()));
+        } else {
+            item.setEnvironmentId(null);
+            item.setEnvironmentName(null);
         }
     }
 
@@ -199,39 +315,6 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
         userIds.addAll(apiCaseList.stream().map(TestPlanApiCasePageResponse::getCreateUser).toList());
         userIds.addAll(apiCaseList.stream().map(TestPlanApiCasePageResponse::getExecuteUser).toList());
         return userLoginService.getUserNameMap(userIds.stream().filter(StringUtils::isNotBlank).distinct().toList());
-    }
-
-    private Map<String, String> getEnvironmentMap(List<TestPlanApiCasePageResponse> apiCaseList) {
-        Map<String, String> envMap = new HashMap<>();
-        //默认环境
-        List<TestPlanApiCasePageResponse> defaultEnv = apiCaseList.stream().filter(item -> StringUtils.equalsIgnoreCase(ModuleConstants.ROOT_NODE_PARENT_ID, item.getCollectEnvironmentId())).toList();
-        if (CollectionUtils.isNotEmpty(defaultEnv)) {
-            List<String> defaultEnvIds = defaultEnv.stream().map(TestPlanApiCasePageResponse::getEnvironmentId).distinct().toList();
-            Map<String, TestPlanApiCasePageResponse> defaultEnvMap = defaultEnv.stream().collect(Collectors.toMap(TestPlanApiCasePageResponse::getEnvironmentId, testPlanApiCasePageResponse -> testPlanApiCasePageResponse));
-            EnvironmentExample environmentExample = new EnvironmentExample();
-            environmentExample.createCriteria().andIdIn(defaultEnvIds);
-            List<Environment> environments = environmentMapper.selectByExample(environmentExample);
-            environments.forEach(item -> {
-                TestPlanApiCasePageResponse testPlanApiCasePageResponse = defaultEnvMap.get(item.getId());
-                envMap.put(testPlanApiCasePageResponse.getId(), item.getName());
-            });
-        }
-        //非默认环境
-        List<TestPlanApiCasePageResponse> collectEnv = apiCaseList.stream().filter(item -> !StringUtils.equalsIgnoreCase(ModuleConstants.ROOT_NODE_PARENT_ID, item.getCollectEnvironmentId())).toList();
-        if (CollectionUtils.isNotEmpty(collectEnv)) {
-            List<String> collectEnvIds = collectEnv.stream().map(TestPlanApiCasePageResponse::getCollectEnvironmentId).distinct().toList();
-            Map<String, List<TestPlanApiCasePageResponse>> collectEnvMap = collectEnv.stream().collect(Collectors.groupingBy(TestPlanApiCasePageResponse::getCollectEnvironmentId));
-            EnvironmentExample environmentExample = new EnvironmentExample();
-            environmentExample.createCriteria().andIdIn(collectEnvIds);
-            List<Environment> environments = environmentMapper.selectByExample(environmentExample);
-            environments.forEach(item -> {
-                List<TestPlanApiCasePageResponse> list = collectEnvMap.get(item.getId());
-                list.forEach(response -> {
-                    envMap.put(response.getId(), item.getName());
-                });
-            });
-        }
-        return envMap;
     }
 
     private Map<String, String> getProject(List<TestPlanApiCasePageResponse> apiCaseList) {
@@ -261,8 +344,9 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
      * @return
      */
     private Map<String, Long> getCollectionCount(TestPlanApiCaseModuleRequest request) {
+        request.setCollectionId(null);
         Map<String, Long> projectModuleCountMap = new HashMap<>();
-        List<ModuleCountDTO> list = extTestPlanApiCaseMapper.collectionCountByRequest(request.getTestPlanId());
+        List<ModuleCountDTO> list = extTestPlanApiCaseMapper.collectionCountByRequest(request);
         list.forEach(item -> {
             projectModuleCountMap.put(item.getModuleId(), (long) item.getDataCount());
         });
@@ -281,7 +365,12 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
         request.setModuleIds(null);
         List<FunctionalCaseModuleCountDTO> projectModuleCountDTOList = extTestPlanApiCaseMapper.countModuleIdByRequest(request, false);
         Map<String, List<FunctionalCaseModuleCountDTO>> projectCountMap = projectModuleCountDTOList.stream().collect(Collectors.groupingBy(FunctionalCaseModuleCountDTO::getProjectId));
-        Map<String, Long> projectModuleCountMap = new HashMap<>();
+        //projectModuleCountDTOList转新的map key 是moduleId value是数量 stream实现
+        Map<String, Long> projectModuleCountMap = projectModuleCountDTOList.stream()
+                .collect(Collectors.groupingBy(
+                        FunctionalCaseModuleCountDTO::getModuleId,
+                        Collectors.summingLong(FunctionalCaseModuleCountDTO::getDataCount)));
+
         projectCountMap.forEach((projectId, moduleCountDTOList) -> {
             List<ModuleCountDTO> moduleCountDTOS = new ArrayList<>();
             for (FunctionalCaseModuleCountDTO functionalCaseModuleCountDTO : moduleCountDTOList) {
@@ -348,7 +437,7 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
         collectionExample.createCriteria().andTypeEqualTo(CaseType.API_CASE.getKey()).andParentIdNotEqualTo(ModuleConstants.ROOT_NODE_PARENT_ID).andTestPlanIdEqualTo(testPlanId);
         List<TestPlanCollection> testPlanCollections = testPlanCollectionMapper.selectByExample(collectionExample);
         testPlanCollections.forEach(item -> {
-            BaseTreeNode baseTreeNode = new BaseTreeNode(item.getId(), item.getName(), CaseType.API_CASE.getKey());
+            BaseTreeNode baseTreeNode = new BaseTreeNode(item.getId(), Translator.get(item.getName(), item.getName()), CaseType.API_CASE.getKey());
             returnList.add(baseTreeNode);
         });
         return returnList;
@@ -362,27 +451,37 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
      */
     private List<BaseTreeNode> getModuleTree(String testPlanId) {
         List<BaseTreeNode> returnList = new ArrayList<>();
-        List<ProjectOptionDTO> rootIds = extTestPlanApiCaseMapper.selectRootIdByTestPlanId(testPlanId);
-        Map<String, List<ProjectOptionDTO>> projectRootMap = rootIds.stream().collect(Collectors.groupingBy(ProjectOptionDTO::getName));
+        List<ProjectOptionDTO> moduleLists = extTestPlanApiCaseMapper.selectRootIdByTestPlanId(testPlanId);
+        // 获取所有的项目id
+        List<String> projectIds = moduleLists.stream().map(ProjectOptionDTO::getName).distinct().toList();
+        // moduleLists中id=root的数据
+        List<ProjectOptionDTO> rootModuleList = moduleLists.stream().filter(item -> StringUtils.equals(item.getId(), ModuleConstants.DEFAULT_NODE_ID)).toList();
+
+        Map<String, List<ProjectOptionDTO>> projectRootMap = rootModuleList.stream().collect(Collectors.groupingBy(ProjectOptionDTO::getName));
         List<ApiCaseModuleDTO> apiCaseModuleIds = extTestPlanApiCaseMapper.selectBaseByProjectIdAndTestPlanId(testPlanId);
         Map<String, List<ApiCaseModuleDTO>> projectModuleMap = apiCaseModuleIds.stream().collect(Collectors.groupingBy(ApiCaseModuleDTO::getProjectId));
-        if (MapUtils.isEmpty(projectModuleMap)) {
-            projectRootMap.forEach((projectId, projectOptionDTOList) -> {
-                BaseTreeNode projectNode = new BaseTreeNode(projectId, projectOptionDTOList.get(0).getProjectName(), Project.class.getName());
-                returnList.add(projectNode);
-                BaseTreeNode defaultNode = apiDefinitionModuleService.getDefaultModule(Translator.get("functional_case.module.default.name"));
-                projectNode.addChild(defaultNode);
-            });
-            return returnList;
-        }
-        projectModuleMap.forEach((projectId, moduleList) -> {
-            BaseTreeNode projectNode = new BaseTreeNode(projectId, moduleList.get(0).getProjectName(), Project.class.getName());
+        projectIds.forEach(projectId -> {
+            // 如果projectRootMap中没有projectId，说明该项目没有根节点 不需要创建
+            // projectModuleMap中没有projectId，说明该项目没有模块 不需要创建
+            // 如果都有  需要创建完整的数结构
+            boolean needCreateRoot = MapUtils.isNotEmpty(projectRootMap) && projectRootMap.containsKey(projectId);
+            boolean needCreateModule = MapUtils.isNotEmpty(projectModuleMap) && projectModuleMap.containsKey(projectId);
+            // 项目名称是
+            String projectName = needCreateModule ? projectModuleMap.get(projectId).getFirst().getProjectName() : projectRootMap.get(projectId).getFirst().getProjectName();
+            // 构建项目那一层级
+            BaseTreeNode projectNode = new BaseTreeNode(projectId, projectName, "PROJECT");
             returnList.add(projectNode);
-            List<String> projectModuleIds = moduleList.stream().map(ApiCaseModuleDTO::getId).toList();
-            List<BaseTreeNode> nodeByNodeIds = apiDefinitionModuleService.getNodeByNodeIds(projectModuleIds);
-            boolean haveVirtualRootNode = CollectionUtils.isEmpty(projectRootMap.get(projectId));
-            List<BaseTreeNode> baseTreeNodes = apiDefinitionModuleService.buildTreeAndCountResource(nodeByNodeIds, !haveVirtualRootNode, Translator.get("functional_case.module.default.name"));
+            List<BaseTreeNode> nodeByNodeIds = new ArrayList<>();
+            if (needCreateModule) {
+                List<String> projectModuleIds = projectModuleMap.get(projectId).stream().map(ApiCaseModuleDTO::getId).toList();
+                nodeByNodeIds = apiDefinitionModuleService.getNodeByNodeIds(projectModuleIds);
+            }
+            List<BaseTreeNode> baseTreeNodes = apiDefinitionModuleService.buildTreeAndCountResource(nodeByNodeIds, needCreateRoot, Translator.get("api_unplanned_request"));
             for (BaseTreeNode baseTreeNode : baseTreeNodes) {
+                if (StringUtils.equals(baseTreeNode.getId(), ModuleConstants.DEFAULT_NODE_ID)) {
+                    // 默认拼项目id
+                    baseTreeNode.setId(projectId + "_" + ModuleConstants.DEFAULT_NODE_ID);
+                }
                 projectNode.addChild(baseTreeNode);
             }
         });
@@ -427,6 +526,31 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
         }
     }
 
+    public List<TestPlanApiCase> getSelectIdAndCollectionId(TestPlanApiCaseBatchRequest request) {
+        if (request.isSelectAll()) {
+            List<TestPlanApiCase> testPlanApiCases = extTestPlanApiCaseMapper.getSelectIdAndCollectionId(request);
+            if (CollectionUtils.isNotEmpty(request.getExcludeIds())) {
+                testPlanApiCases.removeAll(request.getExcludeIds());
+            }
+            return testPlanApiCases;
+        } else {
+            TestPlanApiCaseExample example = new TestPlanApiCaseExample();
+            example.createCriteria().andIdIn(request.getSelectIds());
+            Map<String, TestPlanApiCase> testPlanApiCaseMap = testPlanApiCaseMapper.selectByExample(example)
+                    .stream()
+                    .collect(Collectors.toMap(TestPlanApiCase::getId, Function.identity()));
+            List<TestPlanApiCase> testPlanApiCases = new ArrayList<>(request.getSelectIds().size());
+            // 按ID的顺序排序
+            for (String id : request.getSelectIds()) {
+                TestPlanApiCase testPlanApiCase = testPlanApiCaseMap.get(id);
+                if (testPlanApiCase != null) {
+                    testPlanApiCases.add(testPlanApiCase);
+                }
+            }
+            return testPlanApiCases;
+        }
+    }
+
 
     /**
      * 批量更新执行人
@@ -441,12 +565,241 @@ public class TestPlanApiCaseService extends TestPlanResourceService {
     }
 
     @Override
-    public void associateCollection(String planId, List<BaseCollectionAssociateRequest> collectionAssociates) {
-        List<BaseCollectionAssociateRequest> apiAssociates = collectionAssociates.stream().filter(associate -> StringUtils.equals(associate.getType(), CaseType.API_CASE.getKey())).toList();
-        if (CollectionUtils.isNotEmpty(apiAssociates)) {
-            apiAssociates.forEach(apiAssociate -> {
-                // TODO: 调用具体的关联功能用例入库方法  入参{计划ID, 测试集ID, 关联的用例ID集合}
+    public void associateCollection(String planId, Map<String, List<BaseCollectionAssociateRequest>> collectionAssociates, SessionUser user) {
+        List<TestPlanApiCase> testPlanApiCaseList = new ArrayList<>();
+        List<LogDTO> logDTOS = new ArrayList<>();
+        TestPlan testPlan = testPlanMapper.selectByPrimaryKey(planId);
+        //处理数据
+        handleApiData(collectionAssociates.get(AssociateCaseType.API), user, testPlanApiCaseList, testPlan, logDTOS);
+        handleApiCaseData(collectionAssociates.get(AssociateCaseType.API_CASE), user, testPlanApiCaseList, testPlan, logDTOS);
+        if (CollectionUtils.isNotEmpty(testPlanApiCaseList)) {
+            testPlanApiCaseMapper.batchInsert(testPlanApiCaseList);
+            operationLogService.batchAdd(logDTOS);
+        }
+    }
+
+    private void handleApiCaseData(List<BaseCollectionAssociateRequest> apiCaseList, SessionUser user, List<TestPlanApiCase> testPlanApiCaseList, TestPlan testPlan, List<LogDTO> logDTOS) {
+        if (CollectionUtils.isNotEmpty(apiCaseList)) {
+            List<String> ids = apiCaseList.stream().flatMap(item -> item.getIds().stream()).toList();
+            ApiTestCaseExample example = new ApiTestCaseExample();
+            example.createCriteria().andIdIn(ids);
+            List<ApiTestCase> apiTestCaseList = apiTestCaseMapper.selectByExample(example);
+            apiCaseList.forEach(apiCase -> {
+                List<String> apiCaseIds = apiCase.getIds();
+                if (CollectionUtils.isNotEmpty(apiCaseIds)) {
+                    List<ApiTestCase> apiTestCases = apiTestCaseList.stream().filter(item -> apiCaseIds.contains(item.getId())).collect(Collectors.toList());
+                    buildTestPlanApiCase(testPlan, apiTestCases, apiCase.getCollectionId(), user, testPlanApiCaseList, logDTOS);
+                }
             });
         }
+    }
+
+    private void handleApiData(List<BaseCollectionAssociateRequest> apiCaseList, SessionUser user, List<TestPlanApiCase> testPlanApiCaseList, TestPlan testPlan, List<LogDTO> logDTOS) {
+        if (CollectionUtils.isNotEmpty(apiCaseList)) {
+            List<String> ids = apiCaseList.stream().flatMap(item -> item.getIds().stream()).toList();
+            boolean isRepeat = testPlanConfigService.isRepeatCase(testPlan.getId());
+            List<ApiTestCase> apiTestCaseList = extTestPlanApiCaseMapper.selectApiCaseByDefinitionIds(ids, isRepeat, testPlan.getId());
+            apiCaseList.forEach(apiCase -> {
+                List<String> apiCaseIds = apiCase.getIds();
+                if (CollectionUtils.isNotEmpty(apiCaseIds)) {
+                    List<ApiTestCase> apiTestCases = apiTestCaseList.stream().filter(item -> apiCaseIds.contains(item.getApiDefinitionId())).collect(Collectors.toList());
+                    buildTestPlanApiCase(testPlan, apiTestCases, apiCase.getCollectionId(), user, testPlanApiCaseList, logDTOS);
+                }
+            });
+        }
+    }
+
+    /**
+     * 构建测试计划接口用例对象
+     *
+     * @param testPlan
+     * @param apiTestCases
+     * @param collectionId
+     * @param user
+     * @param testPlanApiCaseList
+     */
+    private void buildTestPlanApiCase(TestPlan testPlan, List<ApiTestCase> apiTestCases, String collectionId, SessionUser user, List<TestPlanApiCase> testPlanApiCaseList, List<LogDTO> logDTOS) {
+        super.checkCollection(testPlan.getId(), collectionId, CaseType.API_CASE.getKey());
+        AtomicLong nextOrder = new AtomicLong(getNextOrder(collectionId));
+        apiTestCases.forEach(apiTestCase -> {
+            TestPlanApiCase testPlanApiCase = new TestPlanApiCase();
+            testPlanApiCase.setId(IDGenerator.nextStr());
+            testPlanApiCase.setTestPlanCollectionId(collectionId);
+            testPlanApiCase.setTestPlanId(testPlan.getId());
+            testPlanApiCase.setApiCaseId(apiTestCase.getId());
+            testPlanApiCase.setEnvironmentId(apiTestCase.getEnvironmentId());
+            testPlanApiCase.setCreateTime(System.currentTimeMillis());
+            testPlanApiCase.setCreateUser(user.getId());
+            testPlanApiCase.setPos(nextOrder.getAndAdd(DEFAULT_NODE_INTERVAL_POS));
+            testPlanApiCase.setExecuteUser(apiTestCase.getCreateUser());
+            testPlanApiCase.setLastExecResult(ExecStatus.PENDING.name());
+            testPlanApiCaseList.add(testPlanApiCase);
+            buildLog(logDTOS, testPlan, user, apiTestCase);
+        });
+    }
+
+    private void buildLog(List<LogDTO> logDTOS, TestPlan testPlan, SessionUser user, ApiTestCase apiTestCase) {
+        LogDTO dto = new LogDTO(
+                testPlan.getProjectId(),
+                user.getLastOrganizationId(),
+                testPlan.getId(),
+                user.getId(),
+                OperationLogType.ASSOCIATE.name(),
+                OperationLogModule.TEST_PLAN,
+                Translator.get("log.test_plan.api_case") + ":" + apiTestCase.getName());
+        dto.setHistory(true);
+        dto.setPath("/test-plan/mind/data/edit");
+        dto.setMethod(HttpMethodConstants.POST.name());
+        logDTOS.add(dto);
+    }
+
+    @Override
+    public void initResourceDefaultCollection(String planId, List<TestPlanCollectionDTO> defaultCollections) {
+        TestPlanCollectionDTO defaultCollection = defaultCollections.stream().filter(collection -> StringUtils.equals(collection.getType(), CaseType.API_CASE.getKey())
+                && !StringUtils.equals(collection.getParentId(), "NONE")).toList().get(0);
+        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+        TestPlanApiCaseMapper apiBatchMapper = sqlSession.getMapper(TestPlanApiCaseMapper.class);
+        TestPlanApiCase record = new TestPlanApiCase();
+        record.setTestPlanCollectionId(defaultCollection.getId());
+        TestPlanApiCaseExample apiCaseExample = new TestPlanApiCaseExample();
+        apiCaseExample.createCriteria().andTestPlanIdEqualTo(planId);
+        apiBatchMapper.updateByExampleSelective(record, apiCaseExample);
+        sqlSession.flushStatements();
+        SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
+    }
+
+    public TestPlanOperationResponse sortNode(ResourceSortRequest request, LogInsertModule logInsertModule) {
+        TestPlanApiCase dragNode = testPlanApiCaseMapper.selectByPrimaryKey(request.getMoveId());
+        if (dragNode == null) {
+            throw new MSException(Translator.get("test_plan.drag.node.error"));
+        }
+        TestPlanOperationResponse response = new TestPlanOperationResponse();
+        MoveNodeSortDTO sortDTO = super.getNodeSortDTO(
+                request.getTestCollectionId(),
+                super.getNodeMoveRequest(request, false),
+                extTestPlanApiCaseMapper::selectDragInfoById,
+                extTestPlanApiCaseMapper::selectNodeByPosOperator
+        );
+        super.sort(sortDTO);
+        response.setOperationCount(1);
+        TestPlan testPlan = testPlanMapper.selectByPrimaryKey(dragNode.getTestPlanId());
+        testPlanResourceLogService.saveSortLog(testPlan, request.getMoveId(), new ResourceLogInsertModule(TestPlanResourceConstants.RESOURCE_API_CASE, logInsertModule));
+        return response;
+    }
+
+    public TaskRequestDTO run(String id, String reportId, String userId) {
+        TestPlanApiCase testPlanApiCase = checkResourceExist(id);
+        TestPlanService testPlanService = CommonBeanFactory.getBean(TestPlanService.class);
+        testPlanService.setTestPlanUnderway(testPlanApiCase.getTestPlanId());
+        testPlanService.setActualStartTime(testPlanApiCase.getTestPlanId());
+        ApiTestCase apiTestCase = apiTestCaseService.checkResourceExist(testPlanApiCase.getApiCaseId());
+        ApiRunModeConfigDTO runModeConfig = testPlanApiBatchRunBaseService.getApiRunModeConfig(testPlanApiCase.getTestPlanCollectionId());
+        runModeConfig.setEnvironmentId(apiBatchRunBaseService.getEnvId(runModeConfig, testPlanApiCase.getEnvironmentId()));
+        runModeConfig.setRunMode(ApiBatchRunMode.PARALLEL.name());
+        TaskRequestDTO taskRequest = getTaskRequest(reportId, id, apiTestCase.getProjectId(), ApiExecuteRunMode.RUN.name());
+        TaskInfo taskInfo = taskRequest.getTaskInfo();
+        TaskItem taskItem = taskRequest.getTaskItem();
+        taskInfo.setRunModeConfig(runModeConfig);
+        taskInfo.setSaveResult(true);
+        taskInfo.setRealTime(true);
+        taskInfo.setUserId(userId);
+
+        if (StringUtils.isEmpty(taskItem.getReportId())) {
+            taskInfo.setRealTime(false);
+            reportId = IDGenerator.nextStr();
+            taskItem.setReportId(reportId);
+        } else {
+            // 如果传了报告ID，则实时获取结果
+            taskInfo.setRealTime(true);
+        }
+
+        // 初始化报告
+        initApiReport(apiTestCase, testPlanApiCase, reportId, runModeConfig, userId);
+
+        return apiExecuteService.execute(taskRequest);
+    }
+
+    public TestPlanApiCase checkResourceExist(String id) {
+        return ServiceUtils.checkResourceExist(testPlanApiCaseMapper.selectByPrimaryKey(id), "api_test_case_not_exist");
+    }
+
+    /**
+     * 获取执行脚本
+     */
+    public GetRunScriptResult getRunScript(GetRunScriptRequest request) {
+        TaskItem taskItem = request.getTaskItem();
+        TestPlanApiCase testPlanApiCase = testPlanApiCaseMapper.selectByPrimaryKey(taskItem.getResourceId());
+        ApiTestCase apiTestCase = apiTestCaseMapper.selectByPrimaryKey(testPlanApiCase.getApiCaseId());
+        apiTestCase.setEnvironmentId(testPlanApiCase.getEnvironmentId());
+        return apiTestCaseService.getRunScript(request, apiTestCase);
+    }
+
+    /**
+     * 预生成用例的执行报告
+     *
+     * @return
+     */
+    public ApiTestCaseRecord initApiReport(ApiTestCase apiTestCase, TestPlanApiCase testPlanApiCase, String reportId, ApiRunModeConfigDTO runModeConfig, String userId) {
+        // 初始化报告
+        ApiReport apiReport = apiTestCaseService.getApiReport(apiTestCase, reportId, runModeConfig.getPoolId(), userId);
+        apiReport.setEnvironmentId(runModeConfig.getEnvironmentId());
+        apiReport.setTestPlanCaseId(testPlanApiCase.getId());
+
+        // 创建报告和用例的关联关系
+        ApiTestCaseRecord apiTestCaseRecord = apiTestCaseService.getApiTestCaseRecord(apiTestCase, apiReport);
+
+        apiReportService.insertApiReport(List.of(apiReport), List.of(apiTestCaseRecord));
+
+        //初始化步骤
+        apiReportService.insertApiReportStep(List.of(getApiReportStep(testPlanApiCase, apiTestCase, reportId)));
+        return apiTestCaseRecord;
+    }
+
+    public ApiReportStep getApiReportStep(TestPlanApiCase testPlanApiCase, ApiTestCase apiTestCase, String reportId) {
+        ApiReportStep apiReportStep = apiTestCaseService.getApiReportStep(testPlanApiCase.getId(), apiTestCase.getName(), reportId, 1L);
+        apiReportStep.setStepType(ApiExecuteResourceType.TEST_PLAN_API_CASE.name());
+        return apiReportStep;
+    }
+
+    public TaskRequestDTO getTaskRequest(String reportId, String resourceId, String projectId, String runModule) {
+        TaskRequestDTO taskRequest = apiTestCaseService.getTaskRequest(reportId, resourceId, projectId, runModule);
+        taskRequest.getTaskInfo().setResourceType(ApiExecuteResourceType.TEST_PLAN_API_CASE.name());
+        taskRequest.getTaskInfo().setNeedParseScript(true);
+        return taskRequest;
+    }
+
+    public void checkReportIsTestPlan(String id) {
+        ApiReportExample example = new ApiReportExample();
+        example.createCriteria().andIdEqualTo(id).andTestPlanCaseIdNotEqualTo("NONE");
+        if (apiReportMapper.countByExample(example) == 0) {
+            throw new MSException("api_case_report_not_exist");
+        }
+    }
+
+    /**
+     * 批量移动
+     *
+     * @param request
+     */
+    public void batchMove(TestPlanApiCaseBatchMoveRequest request) {
+        List<String> ids = doSelectIds(request);
+        if (CollectionUtils.isNotEmpty(ids)) {
+            moveCaseToCollection(ids, request.getTargetCollectionId());
+        }
+    }
+
+    private void moveCaseToCollection(List<String> ids, String targetCollectionId) {
+        AtomicLong nextOrder = new AtomicLong(getNextOrder(targetCollectionId));
+        SqlSession sqlSession = sqlSessionFactory.openSession(ExecutorType.BATCH);
+        TestPlanApiCaseMapper testPlanApiCaseMapper = sqlSession.getMapper(TestPlanApiCaseMapper.class);
+        ids.forEach(id -> {
+            TestPlanApiCase testPlanApiCase = new TestPlanApiCase();
+            testPlanApiCase.setId(id);
+            testPlanApiCase.setPos(nextOrder.getAndAdd(DEFAULT_NODE_INTERVAL_POS));
+            testPlanApiCase.setTestPlanCollectionId(targetCollectionId);
+            testPlanApiCaseMapper.updateByPrimaryKeySelective(testPlanApiCase);
+        });
+        sqlSession.flushStatements();
+        SqlSessionUtils.closeSqlSession(sqlSession, sqlSessionFactory);
     }
 }
